# mate-dialogs

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in
.tx/: config
data/: matedialog.1
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
help/: Makefile.am
help/C/: index.docbook
help/bg/: bg.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: ChangeLog  LINGUAS  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  (+48 more)
src/: Makefile.am  about.c  entry.c  notification.c  option.h  tree.c  util.c
