@YELP_HELP_RULES@

HELP_ID = matedialog
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = figures/matedialog-calendar-screenshot.png figures/matedialog-entry-screenshot.png figures/matedialog-error-screenshot.png figures/matedialog-fileselection-screenshot.png figures/matedialog-information-screenshot.png figures/matedialog-list-screenshot.png figures/matedialog-notification-screenshot.png figures/matedialog-progress-screenshot.png figures/matedialog-question-screenshot.png figures/matedialog-text-screenshot.png figures/matedialog-warning-screenshot.png

HELP_LINGUAS = bg cs da de el en_GB es eu fi fr oc pt_BR ru sv uk zh_CN
